agregando extensions,maps,mixins. Detalles

--- a/factory.html
+++ b/factory.html
@@ -10,7 +10,9 @@
   </head>
 <body id="bo27">
   <div class="container1223">
-    <div class="Titulo">Let´s have a walk into our factory!!</div>
+    <div class="Titulo">
+       <h1>Let´s have a walk into our factory!!</h1>
+    </div>
     <div class="First">
     <span>Selection and purchase of green coffee:</span> 
     <p>This step involves the selection and purchase of high-quality green coffee beans. Factory buyers typically source coffee beans from various regions worldwide that meet desired standards of quality and flavor. The quality of the green coffee is crucial for producing a good final product.</p>
