--- a/factory2.html
+++ b/factory2.html
@@ -12,10 +12,10 @@
         <div class="row row22">
             <div class="col col22">
                 <p>We have more to see in this place!</p>
-                <img src="./img/gra.png" alt="Imagen" id="girar">
+                <img class="gran" src="./img/gra.png" alt="Imagen" id="girar">
             </div>
             
-          <div class="col">
+          <div class="col col223">
             <span>Packaging:</span> 
             <p>After passing quality control, the ground coffee is ready for packaging. Coffee packaging involves several considerations, including packaging material, size, design, and labeling. Different packaging formats, such as bags, cans, or pods, may be used depending on consumer preferences and market trends.</p>
           </div>
