--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </head>
 <!---- BODY ---->
 <body class="bo122">
- <header>
+
+ <header class="header33">
  <!---- NAVBAR ---->
  <nav id="nav34">
     <div id="mobile">
@@ -34,7 +35,7 @@
       </div>
     </div>
     
-    <div class="desktop">
+    <div class="desktop fr">
       <div class="logo"><i class="fa-solid fa-mug-hot">Francaffe!</i></div>
       <div class="primary">
         <a href="./factory.html" target="_blank">Our factory</a>
@@ -47,18 +48,10 @@
         <a href="./aboutus.html" target="_blank">About us</a>
         <a href="./portfolio.html" target="_blank">About me</a>
       </div>
-      
-      <div class="secondary mini">
-        <a class="more" href="#">More</a>
-        <div class="submenu">
-          <a href="#">Search</a>
-          <a href="#">Sign up</a>
-          <a href="#">Login</a>
-        </div>
-    </div>
+  
  </nav>
   <div>
-    <h1>Coffe's blog</h1>
+    <h1 class="tete">Coffe's blog</h1>
   </div>
  </header>
  <!-- Title -->
@@ -96,7 +89,7 @@
  </section>
  <!---- FOURTH SECTION ---->
  <section class="container">
-     <article class="videaso">
+     <article class="vidd">
          <h4>And if you still want to see more...</h4>
          <iframe width="560" height="310" src="https://www.youtube.com/embed/DLUJZ1nvN-w?si=ZjGGT62OFh7J2Puo" title="Coffe Video WebDeveloper Programmer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
      </article>
