cambios, actualizaciones, extensiones de sass

--- a/factory2.html
+++ b/factory2.html
@@ -11,8 +11,10 @@
     <div class="container177">
         <div class="row row22">
             <div class="col col22">
-                <p>We have more to see in this place!</p>
-                <img class="gran" src="./img/gra.png" alt="Imagen" id="girar">
+                <h1 class="gran3">We have more to see in this place!</h1>
+                <div class="gran">
+                  <img src="./img/gra.png" alt="Imagen" id="girar23">
+                </div>
             </div>
             
           <div class="col col223">
