--- a/factory.html
+++ b/factory.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Factory</title>
+    <title>Factory!</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     </p>
    </div>
    <div class="Second">
-      <span>Quality Assessment:</span> 
+      <span>Quality Assessment :</span> 
       <p>Once potential sources of green coffee beans are identified, quality assessment becomes a crucial aspect of the selection process. Buyers often evaluate factors such as bean size, density, moisture content, and defects to ensure they meet quality standards. They may also consider other factors like altitude, soil quality, and processing methods, which can influence flavor profiles.</p>
    </div>
    <div class="Third">
