--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 </head>
 <!---- BODY ---->
 <body class="bo122">
-
  <header class="header33">
  <!---- NAVBAR ---->
  <nav id="nav34">
@@ -48,8 +47,8 @@
         <a href="./aboutus.html" target="_blank">About us</a>
         <a href="./portfolio.html" target="_blank">About me</a>
       </div>
-  
  </nav>
+ <!-- Title -->
   <div class="tete">
     <h1>Coffe's blog</h1>
   </div>
