--- a/portfolio.html
+++ b/portfolio.html
@@ -85,9 +85,9 @@
         <section class="about56">
           <div class="container23">
            <div class="text23">
-            <p class="ab23">About <strong class="bold23">me</strong></p>
-            <p>I am a budding programmer and web developer based in Amsterdam. I'm passionate about coding and currently focused on expanding my skills in JavaScript. With a keen interest in both frontend and backend development, I enjoy creating sleek and intuitive web experiences.
-            Let's build something awesome together!</p>
+              <p class="ab23">About <strong class="bold23">me</strong></p>
+              <p>I am a budding programmer and web developer based in Amsterdam. I'm passionate about coding and currently focused on expanding my skills in JavaScript. With a keen interest in both frontend and backend development, I enjoy creating sleek and intuitive web experiences.
+               Let's build something awesome together!</p>
             </div>
            <div class="image56">
             <img class="img56"src="./img/mun.png" alt="imagengirando" class="girar">
@@ -95,7 +95,7 @@
           </div>
           </section>
         <section class="contact56">   
-          <form action="mailto:tucorreo@example.com" method="post" enctype="text/plain">
+          <form action="mailto:seilerfranco317@gmail.com" method="post" enctype="text/plain">
             <label for="nombre">Name & Surname</label>
             <input type="text" id="nombre" name="nombre" placeholder="Your name.." required>
     
