cambios actualizaciones y mas

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,9 +30,9 @@
                   <div class="primary">
                   </div>
                   <div class="secondary-full2">
-                    <a href="#">About</a>
-                    <a href="#">Services</a>
-                    <a href="#">Contact</a>
+                    <a href="#about">About</a>
+                    <a href="#services">Services</a>
+                    <a href="#contact">Contact</a>
                   </div>
                   <div class="secondary-mini2">
                     <a class="more" href="#">More</a>
@@ -65,7 +65,7 @@
         </section>
         <div class="linea56">
         </div> 
-        <section class="container-servi">
+        <section id="services" class="container-servi">
             <div class="img57">
               <img id="img57"src="./img/alguito.png" alt="image about coffee">
             </div>
@@ -82,7 +82,7 @@
               <p class="servi24">if your website has any problems or you want to change something, i am ready to fix it</p>
             </div>
         </section>
-        <section class="about56">
+        <section id="about"class="about56">
           <div class="container23">
            <div class="text23">
               <p class="ab23">About <strong class="bold23">me</strong></p>
@@ -94,7 +94,7 @@
            </div>
           </div>
           </section>
-        <section class="contact56">   
+        <section id="contact" class="contact56">   
           <form action="mailto:seilerfranco317@gmail.com" method="post" enctype="text/plain">
             <label for="nombre">Name & Surname</label>
             <input type="text" id="nombre" name="nombre" placeholder="Your name.." required>
