--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
     <div class="desktop fr">
       <div class="logo"><i class="fa-solid fa-mug-hot">Francaffe!</i></div>
       <div class="primary">
-        <a href="./factory.html" target="_blank">Our factory</a>
-        <a href="./factory2.html" target="_blank">Our factory 2</a>
-        <a href="./images.html" target="_blank">Explore with images</a>
+        <a href="./Pages/factory.html" target="_blank">Our factory</a>
+        <a href="./Pages/factory2.html" target="_blank">Our factory 2</a>
+        <a href="./Pages/images.html" target="_blank">Explore with images</a>
         
         
       </div>
       <div class="secondary-full">
-        <a href="./aboutus.html" target="_blank">About us</a>
-        <a href="./portfolio.html" target="_blank">About me</a>
+        <a href="./Pages/aboutus.html" target="_blank">About us</a>
+        <a href="./Pages/portfolio.html" target="_blank">About me</a>
       </div>
  </nav>
  <!-- Title -->
