--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Explore the coffe´s through captivating stories. Welcome to my blog, where I share my passion for coffee and document my journey. Discover new brews, brewing techniques, coffee culture. Also, this is part of my web development portfolio.">
     <meta name="keywords" content="Web Development, Frontend Development, Backend Development, HTML, CSS, Responsive Design, Portfolio Showcase, Web Projects, Online Presence, Coffee, Cafe, Brews, Brewing Techniques, Coffee Culture, Coffee Enthusiast">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,15 +37,15 @@
     <div class="desktop fr">
       <div class="logo"><i class="fa-solid fa-mug-hot">Francaffe!</i></div>
       <div class="primary">
-        <a href="/factory.html" target="_blank">Our factory</a>
-        <a href="/factory2.html" target="_blank">Our factory 2</a>
-        <a href="/images.html" target="_blank">Explore with images</a>
+        <a href="factory.html" target="_blank">Our factory</a>
+        <a href="factory2.html" target="_blank">Our factory 2</a>
+        <a href="images.html" target="_blank">Explore with images</a>
         
         
       </div>
       <div class="secondary-full">
-        <a href="/aboutus.html" target="_blank">About us</a>
-        <a href="/portfolio.html" target="_blank">About me</a>
+        <a href="aboutus.html" target="_blank">About us</a>
+        <a href="portfolio.html" target="_blank">About me</a>
       </div>
  </nav>
  <!-- Title -->
